projects/bot_eval_run/run_1770589479565/iterations/06/cmd_node_--test_tests_oracle.test.js.stdout.txt
✖ TaskStore: CRUD persists to JSON file (1.5447ms)
✖ CLI: end-to-end flow (43.6654ms)
ℹ tests 2
ℹ suites 0
ℹ pass 0
ℹ fail 2
ℹ cancelled 0
ℹ skipped 0
ℹ todo 0
ℹ duration_ms 106.2195

✖ failing tests:

test at tests\oracle.test.js:26:1
✖ TaskStore: CRUD persists to JSON file (1.5447ms)
  C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\run_1770589479565\workspace\dist\store.js:5
  doneAt ?  : string;
            ^
  
  SyntaxError: Unexpected token ':'
      at wrapSafe (node:internal/modules/cjs/loader:1692:18)
      at Module._compile (node:internal/modules/cjs/loader:1735:20)
      at Object..js (node:internal/modules/cjs/loader:1893:10)
      at Module.load (node:internal/modules/cjs/loader:1481:32)
      at Module._load (node:internal/modules/cjs/loader:1300:12)
      at TracingChannel.traceSync (node:diagnostics_channel:328:14)
      at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
      at Module.require (node:internal/modules/cjs/loader:1504:12)
      at require (node:internal/modules/helpers:152:16)
      at TestContext.<anonymous> (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\run_1770589479565\workspace\tests\oracle.test.js:28:25)

test at tests\oracle.test.js:62:1
✖ CLI: end-to-end flow (43.6654ms)
  AssertionError [ERR_ASSERTION]: C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\run_1770589479565\workspace\dist\cli.js:5
  exports.program = new Command();
                        ^
  
  ReferenceError: Command is not defined
      at Object.<anonymous> (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\run_1770589479565\workspace\dist\cli.js:5:23)
      at Module._compile (node:internal/modules/cjs/loader:1761:14)
      at Object..js (node:internal/modules/cjs/loader:1893:10)
      at Module.load (node:internal/modules/cjs/loader:1481:32)
      at Module._load (node:internal/modules/cjs/loader:1300:12)
      at TracingChannel.traceSync (node:diagnostics_channel:328:14)
      at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
      at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
      at node:internal/main/run_main_module:33:47
  
  Node.js v24.12.0
  
  
  1 !== 0
  
      at TestContext.<anonymous> (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\run_1770589479565\workspace\tests\oracle.test.js:69:10)
      at Test.runInAsyncScope (node:async_hooks:214:14)
      at Test.run (node:internal/test_runner/test:1106:25)
      at Test.processPendingSubtests (node:internal/test_runner/test:788:18)
      at Test.postRun (node:internal/test_runner/test:1235:19)
      at Test.run (node:internal/test_runner/test:1163:12)
      at async startSubtestAfterBootstrap (node:internal/test_runner/harness:358:3) {
    generatedMessage: false,
    code: 'ERR_ASSERTION',
    actual: 1,
    expected: 0,
    operator: 'strictEqual',
    diff: 'simple'
  }
